--- a/package.json
+++ b/package.json
@@ -7,5 +7,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.17.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "express-validator": "^6.9.2",
+    "http-status-codes": "^2.1.4",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.11.11",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1"
+  }
 }
