--- a/client-react/package.json
+++ b/client-react/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "joi": "^17.3.0",
+    "jquery": "^3.5.1",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
