--- a/client-react/package.json
+++ b/client-react/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.3",
     "joi": "^17.3.0",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
