--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^6.9.2",
     "http-status-codes": "^2.1.4",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.11",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1"
