--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.9.2",
     "http-status-codes": "^2.1.4",
+    "just-omit": "^1.1.0",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.11.11",
