--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "install-client": "cd client && npm install",
-    "build": "cd client && npm run build",
+    "install-client": "cd client-react && npm install",
+    "build": "cd client-react && npm run build",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install-client && npm run build"
   },
   "author": "",
